    now a dependency.
  * Larch now loads config options from ~/.larch/config.yaml if it exists, or
    from the file specified by the --config command-line option. This file may
    contain multiple sections. If a section name is specified via the
    command-line, Larch will use the options in that section for the session;
    otherwise it will use the options in the "default" section. See the README
    for more details.
  * Folders are now copied recursively by default.
  * Progress information is now displayed regularly while scanning large
    mailboxes.
  * Added short versions of common command-line options.
  * The --fast-scan option has been removed.
  * Fixed encoding issues when creating mailboxes and getting mailbox lists.
  * Fixed incorrect case-sensitive treatment of the 'INBOX' folder name.

Version 1.0.2 (2009-08-05)
  * Fixed a bug that caused Larch to try to set the read-only \Recent flag on
    the destination server.

Version 1.0.1 (2009-05-10)
  * Ruby 1.9.1 support.
  * Much more robust handling of unexpected server disconnects and dropped
    connections.
  * Added --all option to copy all folders recursively.
  * Added --all-subscribed option to copy all subscribed folders recursively.
  * Added --dry-run option to simulate changes without actually making them.
  * Added --exclude and --exclude-file options to specify folders that should
    not be copied.
  * Added --ssl-certs option to specify a bundle of trusted SSL certificates.
  * Added --ssl-verify option to verify server SSL certificates.
  * Added a new "insane" logging level, which will output all IMAP commands and
    responses to STDERR.
  * Fixed excessive post-scan processing times for very large mailboxes.
  * Fixed potential scan problems with very large mailboxes on certain servers.
  * POSIX signals are no longer trapped on platforms that aren't likely to
    support them.

Version 1.0.0 (2009-03-17)
  * First release.