@@ -19,6 +19,8 @@ Version 1.1.0 (git)
   * The --fast-scan option has been removed.
   * Fixed encoding issues when creating mailboxes and getting mailbox lists.
   * Fixed incorrect case-sensitive treatment of the 'INBOX' folder name.
+  * Fixed a bug in which Larch would try to copy flags that weren't supported on
+    the destination server.
 
 Version 1.0.2 (2009-08-05)
   * Fixed a bug that caused Larch to try to set the read-only \Recent flag on
